--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="OIP.jpg" rel="icon">
     </head>
     <body>
-        <header>
+        <header class="main-header">
             <a href="/">
                 <img src="Central_Coast_Council_logo.svg.png" class="logo">
             </a>
@@ -16,7 +16,9 @@
                 <a href="/about.html">About</a>
             </nav>
         </header>
-        <main></main>
+        <main>
+
+        </main>
         <footer></footer>
 
     </body>
