Navigation Changes and formating

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
             <a href="/">
                 <img src="Central_Coast_Council_logo.svg.png" class="logo">
             </a>
-            <nav>
+            <nav class="navigation">
                 <a href="/">Home</a>
                 <a href="/contact.html">Contact</a>
                 <a href="/about.html">About</a>
             </nav>
         </header>
         <main>
-
+          
         </main>
         <footer></footer>
 
